Refactor and optimize GridModels